--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "electron": "^4.0.1",
     "electron-prebuilt": "^1.4.13"
   },
   "devDependencies": {},
