Orgranizando el proyecto RAD STUDIO

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ client/node_modules
 server/node_modules
 clientpas/__history
 clientpas/__recovery
+clientpas/controller/__history
+clientpas/controller/__recovery
 clientpas/Win32
 clientsharp/ForumDev/ForumDevJs/bin
 clientsharp/ForumDev/ForumDevJs/obj
