--- a/server/package.json
+++ b/server/package.json
@@ -17,12 +17,15 @@
   "dependencies": {
     "body-parse": "^0.1.0",
     "crypto-js": "^3.1.9-1",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "js-sha512": "^0.8.0",
     "mssql": "^4.3.0",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "promise-mysql": "^3.3.1",
-    "tedious": "^3.0.1"
+    "tedious": "^3.0.1",
+    "uuid": "^3.3.2"
   }
 }
