Reorganizando el cliente

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,11 @@
 clientcpp/__history
 clientcpp/__recovery
 clientcpp/Win32
-
+clientcpp/Controllers/_history
+clientcpp/Controllers/_reconver
+clientcpp/Models/__history
+clientcpp/Models/__recovery
+clientcpp/Views/__history
+clientcpp/Views/__recovery
+clientcpp/Services/__history
+clientcpp/Services/__recovery
