--- a/clientpas/ForumDevV2.dproj
+++ b/clientpas/ForumDevV2.dproj
@@ -120,6 +120,7 @@
         <DCCReference Include="UMNotification.pas"/>
         <DCCReference Include="USynchronizer.pas"/>
         <DCCReference Include="UServerMethods.pas"/>
+        <DCCReference Include="UMisc.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
